# ehist

./: .editorconfig  .gitignore  .pre-commit-config.yaml  COPYING  README.md  pyproject.toml
.github/workflows/: unit_tests.yml
ehist/: __init__.py  ansi_cmap.py  axis.py  bayesian_blocks.py  hist1d.py  hist2d.py  hist_cat.py  util.py
examples/: cmap.py  integrate.py  plot_ehist.py  test_errorbars.py  test_values.py
tests/: test_axes.py  test_hist1d.py
