# SPDX-FileCopyrightText: © 2023 The ehist authors
#
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ehist"
requires-python = "~=3.7"
authors = [{name = "Kevin Meagher"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy","matplotlib","scipy"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kjmeagher/ehist"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov"]

[tool.black]
line-length = 108
target-version = ["py37"]

[tool.pylint.messages_control]
disable = "C0103,C0104,C0114,C0115,C0116,W0603,R0902,R0903,R0912,R0913,R0914,W0201,W0622"

[tool.pylint.format]
max-line-length = "108"

[tool.ruff]
select = ["ALL"]
ignore = [
    "D",    # pydocstyle
    "ANN",  # flake8-annotations
    "T20",  # flake8-print
    "S101", # assert-used
    "PLR0913",
    "FBT002",
    "A001",
    "A002",
    "C901",
    "PLR0912",
    "ERA001",
    ]
line-length = 108
target-version = "py37"
fixable = ["I"]


[tool.ruff.per-file-ignores]
"ehist/bayesian_blocks.py" = [
    "N","A","RET","EM","TRY","PLR","ISC","B","FBT"
]
"tests/*" = [
    "N",       # pep8-naming
    "PT",      # flake8-pytest-style
    "PLR",     # max-statements
    "INP001"
    ]
"examples/*"=[
    "N",
    "INP",

]

[tool.codespell]
ignore-words-list="te"
