# SPDX-FileCopyrightText: © 2023 The ehist authors
#
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ehist"
requires-python = "~=3.8"
authors = [{name = "Kevin Meagher"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy","matplotlib","scipy"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kjmeagher/ehist"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov"]

[tool.ruff]
line-length = 108
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
    "S101",    # assert-used
    "PLR0913", # Too many arguments to function call
    "FBT002",  # Boolean default positional argument
    "C901",    # is too complex
    "PLR0912", # Too many branches
    "ERA001",  # Found commented-out code
    ]
fixable = ["I"]

[tool.ruff.lint.per-file-ignores]
"ehist/bayesian_blocks.py" = [
    "N","A","RET","EM","TRY","PLR","ISC","B","FBT"
]
"tests/*" = [
    "PT",      # flake8-pytest-style
    "PLR0915", # max-statements
    "INP001"
    ]
"examples/*"=[
    "N813",
    "INP001",
    "T201",    # flake8-print
]

[tool.codespell]
ignore-words-list="te"
